<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Lab2</string>

    <string name="action_insert_data">Insert data</string>

    <string name="action_export_data">Export data</string>

    <string name="action_delete_all_entries">Delete All Password</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding a password</string>

    <string name="editor_activity_title_new_pass">Add a Password</string>

    <string name="editor_activity_title_edit_pass">Edit Password</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="editor_insert_pass_successful">Password saved</string>

    <string name="editor_insert_pass_failed">Error with saving password</string>

    <string name="editor_update_pass_successful">Password updated</string>

    <string name="editor_update_pass_failed">Error with updating password</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_pass_successful">Password deleted</string>

    <string name="editor_delete_pass_failed">Error with deleting password</string>

    <string name="delete_dialog_msg">Delete this password?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_res">Resource</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_login">Login</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pass">Password</string>

    <string name="new_pass">New password:</string>

    <string name="res_empty">The resources field cannot be empty</string>

    <string name="pass_empty">The password field cannot be empty</string>

    <string name="hint_notes">Notes</string>
    <string name="login_mes">Please enter your password.Be careful! If this is your first login, then this password will be used to login</string>
    <string name="button_entry">Entry</string>
    <string name="action_change_password">Change password</string>
    <string name="button_change">Change</string>
    <string name="export_data">File name:</string>
</resources>
