<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="60dp">

        <TextView
            android:id="@+id/login_mes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_mes" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_pass" />

        <Button
            android:id="@+id/entry_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_entry" />

    </LinearLayout>
</RelativeLayout>