<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_res"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_res"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_login"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_login"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_pass"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/EditorFieldStyle"
                    android:layout_weight="10"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword" />

                <ImageButton
                    android:id="@+id/showPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_visibility"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>
            <EditText
                android:id="@+id/edit_notes"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_notes"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
